@@ -1,3 +1,5 @@
+2006/8/18 -- released version 20060818_trunk
+
 2006/8/17 -- released version 20060817_trunk
 
 2006/8/16 -- released version 20060816_trunk
